--- a/new_madrid/package.json
+++ b/new_madrid/package.json
@@ -2,7 +2,8 @@
   "name": "new_madrid",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:7071",
+  "homepage": "api",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
